[package]
name = "ripgrok"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
config = "0.15.14"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webpki-roots = "1.0.2"
