[package]
name = "ripgrok-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
config = "0.15.14"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webpki-roots = "1.0.2"

ripgrok-common = { path = "../common" }
dirs = "6.0.0"
toml = "0.9.7"
